--- a/spotify.html
+++ b/spotify.html
@@ -135,7 +135,14 @@
                     <span class="tot-time">03:33</span>
                 </div>
             </div>
-            <div class="controls"></div>
+            <div class="controls">
+                <i class="fa-brands fa-square-youtube"></i>
+                <i class="fa-solid fa-tablet"></i>
+                <i class="fa-solid fa-volume-high"></i>
+                <label for="volume"></label>
+                <input type="range" min="0" max="100" name="volume">
+                <i class="fa-solid fa-expand"></i>
+            </div>
         </div>
     </div>
 </body>
