--- a/spotify.html
+++ b/spotify.html
@@ -120,7 +120,10 @@
                 
         </div>
         <div class="music-player">
-            <div class="album"></div>
+            <div class="album">
+                <img src="card4img.jpeg" >
+                <div>Naaa ready ya varava la album</div>
+            </div>
             <div class="player">
                 <div class="player-controls">
                     <img src="player_icon1.png" class="player-control-icon">
